6547358: 2/2 j.l.i.: manifest attribute 'Can-Retransform-Classes' is ignored by isRetransformClassesSupported()

IsRetransformClassesSupported() should return the capability rather than give the agent the capability

Reviewed-by: ohair, sspitsyn